--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,8 @@
         <activity android:name=".activity.field.CustomerVisitDetailsListActivity"/>
         <activity android:name=".activity.field.CustomerVisitDetailsMapActivity"/>
         <activity android:name=".activity.field.StatisticsDetailsActivity"/>
+        <activity android:name=".activity.field.StaffPositionActivity"/>
+        <activity android:name=".activity.field.EmployeesTrajectoryActivity"/>
         <!-- ———————————————————————————————————————————————————————————————— -->
 
 
