--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     compile files('libs/MobCommons-2016.1107.1809.jar')
     compile files('libs/MobTools-2016.1107.1809.jar')
     compile files('libs/BaiduLBS_Android.jar')
+    compile 'com.jph.takephoto:takephoto_library:4.0.3'
+    compile files('libs/sun.misc.BASE64Decoder.jar')
+    compile project(':indexlib')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.0-RC1'
@@ -74,8 +77,4 @@ dependencies {
     compile 'com.jph.takephoto:takephoto_library:4.0.3'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-
-    compile 'com.jph.takephoto:takephoto_library:4.0.3'
-    compile files('libs/sun.misc.BASE64Decoder.jar')
-
 }
